update lesson content

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JavaScript DOMContentLoaded Lab</title>
+
+  <!-- External script file -->
+  <script type="text/javascript" src="index.js"></script>
+  
+  <!-- Inline script -->
+  <script>console.log("This console.log() is in the second script tag")</script>
+
+  <title>Delaying Script Execution</title>
 </head>
 <body>
   <p id="text">JavaScript is so cool. It lets me add text to my page programmatically.</p>
-  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
